# rules_bun

./: .gitignore  .gitleaks.toml  .gitleaksignore  .gitlint  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  TODO.md  VERSION  WORKSPACE  flake.nix  implementation_plan.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: arl2vkxnjyw2zri2g2v6g4k6x165iidj-source  kx00h535s3jzb9803vnylxllij3zhix5-source  m8b59f51n4mjwch34bk6zhyak3v1n222-source
.github/: AGENTS.md
.github/workflows/: BUILD.bazel  ci.yml  copilot-setup-steps.yml  pages.yml
bun/: AGENTS.md  BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl  version.bzl
docs/: AGENTS.md  BUILD.bazel  bun_install.md  index.md  rules.md
examples/: AGENTS.md
examples/basic/: AGENTS.md  BUILD.bazel  README.md
examples/bun_golang_monorepo/: .bazelrc  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  extension.bzl  flake.nix  go.work  package.json
examples/bun_golang_monorepo/apps/api/: BUILD.bazel  go.mod  lint_test.sh
examples/bun_golang_monorepo/apps/api/cmd/server/: BUILD.bazel  main.go
examples/bun_golang_monorepo/apps/api/internal/config/: BUILD.bazel  config.go
examples/bun_golang_monorepo/apps/api/internal/handler/: BUILD.bazel  handler.go  handler_test.go
examples/bun_golang_monorepo/apps/web/: BUILD.bazel
examples/bun_golang_monorepo/apps/web/test/: BUILD.bazel  index.test.ts
examples/vite_monorepo/: AGENTS.md  BUILD.bazel  README.md  package.json
examples/vite_monorepo/apps/app-a/: index.html  main.js  package.json
examples/vite_monorepo/apps/app-b/: index.html  main.js  package.json
examples/workspace/: AGENTS.md  BUILD.bazel  README.md  package.json
internal/: AGENTS.md  BUILD.bazel  bun_binary.bzl  bun_build_support.bzl  bun_bundle.bzl  bun_command.bzl  bun_compile.bzl  bun_dev.bzl  bun_install.bzl  bun_script.bzl  bun_test.bzl  js_compat.bzl  js_library.bzl  js_run_devserver.bzl  runtime_launcher.bzl  workspace.bzl
js/: AGENTS.md  BUILD.bazel  defs.bzl
npm/: AGENTS.md  BUILD.bazel  extensions.bzl  repositories.bzl
tests/: AGENTS.md  BUILD.bazel  nested_bazel_test.sh
tests/binary_test/: .env  AGENTS.md  BUILD.bazel  env.ts  flag_probe.ts  hello.js  hello.ts  payload.txt  preload.ts  run_binary.sh  run_env_binary.sh  run_flag_binary.sh  run_parent_env_binary.sh  run_path_binary.sh  runtime.env  verify_configured_launcher_shape.sh  verify_data_shape.sh  verify_runtime_flags_shape.sh
tests/binary_test/env_parent/: .env
tests/binary_test/env_parent/src/: main.ts
tests/bun_test_test/: AGENTS.md  BUILD.bazel  cache_hit_shape.sh  cache_miss_shape.sh  configured_suite_shape.sh  failing.test.ts  failing_suite_shape.sh  junit_shape.sh  passing.test.ts  preload.ts  test.env
tests/bundle_test/: AGENTS.md  BUILD.bazel  cli.ts  main.ts  out.js  out.js.map  run_compiled_binary.sh  sourcemap_bundle__main.js  sourcemap_bundle__main.js.map  verify_bundle.sh  verify_external_shape.sh  verify_flag_aquery.sh  verify_hermetic_shape.sh  verify_minify.sh  verify_site_build.sh  verify_site_build_meta.sh  verify_sourcemap_shape.sh
tests/bundle_test/site/: index.html  main.ts  styles.css
tests/bundle_test/sourcemap_case/: BUILD.bazel  entry.ts
tests/ci_test/: AGENTS.md  BUILD.bazel  phase8_ci_matrix_shape_test.sh  phase8_ci_targets.sh  phase8_ci_targets_test.sh
tests/install_extension_test/: AGENTS.md  BUILD.bazel  extension_shape_test.sh  npm_extension_shape_test.sh
tests/install_test/: AGENTS.md  BUILD.bazel  clean_install.sh  determinism.sh  environment_shape.sh  install_flags_shape.sh  lifecycle_scripts.sh  repeatability.sh  stale_lockfile.sh  workspace_parity.sh  workspaces.sh  workspaces_catalog.sh
tests/integration_test/: AGENTS.md  BUILD.bazel  examples_basic_e2e_build_test.sh  examples_basic_hot_restart_shape_test.sh  examples_basic_run_e2e_test.sh  examples_bun_golang_monorepo_e2e_build_test.sh  examples_vite_monorepo_catalog_shape_test.sh  examples_vite_monorepo_e2e_test.sh  examples_workspace_bundle_e2e_test.sh  examples_workspace_catalog_shape_test.sh  repo_all_targets_test.sh
tests/js_compat_test/: AGENTS.md  BUILD.bazel  app.test.ts  helper.ts  main.ts  payload.txt  run_binary.sh  run_devserver.sh  verify_workspace_shape.sh
tests/js_compat_test/app/: package.json
tests/library_test/: AGENTS.md  BUILD.bazel  app.test.ts  app.ts  helper.ts  verify_bundle.sh
tests/npm_compat_test/: AGENTS.md  BUILD.bazel  npm_translate_lock_workspace_test.sh
tests/script_test/: .env  AGENTS.md  BUILD.bazel  env.ts  hello.ts  package.json  run_env_script.sh  run_paraglide_monorepo_builds.sh  run_script.sh  run_vite_app.sh  run_vite_monorepo_apps.sh  run_workspace_parallel.sh  run_workspace_script.sh  verify_launcher_flags.sh
tests/script_test/paraglide_monorepo/: package.json
tests/script_test/paraglide_monorepo/scripts/: build-app-a.mjs  build-app-b.mjs
tests/script_test/vite_monorepo/: package.json
tests/script_test/vite_monorepo/apps/app-a/: index.html  main.js  package.json
tests/script_test/vite_monorepo/apps/app-b/: index.html  main.js  package.json
tests/script_test/workspace_run/: package.json
tests/toolchain_test/: AGENTS.md  BUILD.bazel  toolchain_resolution_matrix.sh  toolchain_version.sh
