module(
    name = "rules_bun",
    version = "0.0.7",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "stardoc", version = "0.7.2")

bun_ext = use_extension("//bun:extensions.bzl", "bun")
use_repo(
    bun_ext,
    "bun_darwin_aarch64",
    "bun_darwin_x64",
    "bun_linux_aarch64",
    "bun_linux_x64",
    "bun_windows_x64",
)

register_toolchains(
    "//bun:darwin_aarch64_toolchain",
    "//bun:darwin_x64_toolchain",
    "//bun:linux_aarch64_toolchain",
    "//bun:linux_x64_toolchain",
    "//bun:windows_x64_toolchain",
)
