load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files(["defs.bzl"])

filegroup(
    name = "repo_runtime_files",
    srcs = [
        "BUILD.bazel",
        "defs.bzl",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//internal:js_compat_bzl"],
)
