load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "extensions.bzl",
    "repositories.bzl",
])

filegroup(
    name = "repo_runtime_files",
    srcs = [
        "BUILD.bazel",
        "extensions.bzl",
        "repositories.bzl",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "extensions_bzl",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//internal:bun_install_bzl"],
)

bzl_library(
    name = "repositories_bzl",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//internal:bun_install_bzl"],
)
