load("//bun:defs.bzl", "bun_dev")

package(default_visibility = ["//visibility:public"])

exports_files([
	"README.md",
	"main.ts",
])

bun_dev(
    name = "web_dev",
    entry_point = "main.ts",
)

bun_dev(
    name = "web_dev_hot_restart",
    entry_point = "main.ts",
    no_clear_screen = True,
    restart_on = ["README.md"],
    watch_mode = "hot",
)
