load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//bun:defs.bzl", "bun_test")

bun_test(
    name = "passing_suite",
    srcs = ["passing.test.ts"],
)

bun_test(
    name = "failing_suite",
    srcs = ["failing.test.ts"],
)

bun_test(
    name = "configured_suite",
    srcs = ["passing.test.ts"],
    preload = ["preload.ts"],
    env_files = ["test.env"],
    no_env_file = True,
    timeout_ms = 250,
    update_snapshots = True,
    rerun_each = 2,
    retry = 3,
    concurrent = True,
    randomize = True,
    seed = 7,
    bail = 1,
    reporter = "junit",
    max_concurrency = 4,
    coverage = True,
    coverage_reporters = ["lcov"],
    test_flags = ["--only-failures"],
)

sh_test(
    name = "bun_test_failing_suite_test",
    srcs = ["failing_suite_shape.sh"],
    args = ["$(location //tests/bun_test_test:BUILD.bazel)"],
    data = ["//tests/bun_test_test:BUILD.bazel"],
)

sh_test(
    name = "bun_test_cache_hit_test",
    srcs = ["cache_hit_shape.sh"],
    args = ["$(location //internal:bun_test.bzl)"],
    data = ["//internal:bun_test.bzl"],
)

sh_test(
    name = "bun_test_cache_miss_test",
    srcs = ["cache_miss_shape.sh"],
    args = ["$(location //internal:bun_test.bzl)"],
    data = ["//internal:bun_test.bzl"],
)

sh_test(
    name = "bun_test_junit_output_test",
    srcs = ["junit_shape.sh"],
    args = ["$(location //internal:bun_test.bzl)"],
    data = ["//internal:bun_test.bzl"],
)

sh_test(
    name = "bun_test_configured_suite_shape_test",
    srcs = ["configured_suite_shape.sh"],
    args = ["$(location :configured_suite)"],
    data = [":configured_suite"],
)
